plugins {
    id 'java'
    id 'application'
    id 'java-library'
}

group = 'ru.nsu.valikov'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    javaMainClass = "ru.nsu.valikov.Main"
}

application {
    mainClass = javaMainClass
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation("org.antlr:antlr4-runtime:4.13.1")


    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

test {
    useJUnitPlatform()
}